--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -33,6 +33,11 @@
                   <span class="btn-inner--icon"><img src="assets/img/icons/common/man.svg"></span>
                   <span class="btn-inner--text">Profesor</span>
                 </a>
+
+                <a (click)="compare()" class="btn btn-neutral btn-icon mt-2">
+                  <span class="btn-inner--icon"><img src="assets/img/icons/common/man.svg"></span>
+                  <span class="btn-inner--text">Comparar</span>
+                </a>
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
